Crash when I import OBJ file #114304

Closed
opened 2023-10-31 08:24:34 +01:00 by JoJang · 5 comments

Blender Version
Broken: Blender 3.6.5, Commit date: 2023-10-16 14:30, Hash cf1e1ed46b
Worked: (newest version of Blender that worked as expected)

Short description of error
Crash when I import OBJ file

Exact steps for others to reproduce the error

  • Open Blender
  • Go to File > Import and Click Wavefront(.obj)
  • import the attached test.obj

test.obj
test.mtl

**Blender Version** Broken: Blender 3.6.5, Commit date: 2023-10-16 14:30, Hash cf1e1ed46b7e Worked: (newest version of Blender that worked as expected) **Short description of error** Crash when I import OBJ file **Exact steps for others to reproduce the error** - Open Blender - Go to `File` > `Import ` and Click `Wavefront(.obj)` - import the attached `test.obj` [test.obj](attachments/be2d0d2c-c42b-461d-a35c-aa1c9fbe9aae) [test.mtl](attachments/8b2c22f1-b0dc-4813-bc31-53125ea3ea11)
JoJang added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-31 08:24:35 +01:00
Author
No description provided.
Member

Thanks for the report. However, for us to fix the issue, we need clear steps to reproduce the issue and the necessary files.

Thanks for the report. However, for us to fix the issue, we need clear steps to reproduce the issue and the necessary files.
Hans Goudey added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-10-31 10:29:58 +01:00
Author

Thanks for the report. However, for us to fix the issue, we need clear steps to reproduce the issue and the necessary files.

Thanks for the reply. Here are the OBJ files.
The steps to reproduce the issue:

  1. Open Blender
  2. Click file
  3. Click Import and Click Wavefront(.obj)
  4. Crash

Thanks!

> Thanks for the report. However, for us to fix the issue, we need clear steps to reproduce the issue and the necessary files. Thanks for the reply. Here are the OBJ files. The steps to reproduce the issue: 1. Open Blender 2. Click file 3. Click Import and Click Wavefront(.obj) 4. Crash Thanks!
2.8 KiB
10 MiB
Hans Goudey added
Status
Needs Triage
and removed
Status
Needs Information from User
labels 2023-11-01 08:13:00 +01:00

I can confirm the crash.
It doesn't appear to be a regression (the same issue occurs in 3.6.5).
Since other applications allow importing this obj, I assume it's a problem in Blender.

In debug mode, this triggers an Assert:

 	blender.exe!_BLI_assert_abort() Line 49	C
 	blender.exe!blender::Vector<blender::VecBase<float,3>,4,blender::GuardedAllocator>::operator[](__int64 index) Line 293	C++
>	blender.exe!blender::io::obj::MeshFromGeometry::create_normals(Mesh * mesh) Line 381	C++
 	blender.exe!blender::io::obj::MeshFromGeometry::create_mesh(Main * bmain, blender::Map<std::string,std::unique_ptr<blender::io::obj::MTLMaterial,std::default_delete<blender::io::obj::MTLMaterial>>,4,blender::PythonProbingStrategy<1,0>,blender::DefaultHash<std::string>,blender::DefaultEquality<std::string>,blender::SimpleMapSlot<std::string,std::unique_ptr<blender::io::obj::MTLMaterial,std::default_delete<blender::io::obj::MTLMaterial>>>,blender::GuardedAllocator> & materials, blender::Map<std::string,Material *,4,blender::PythonProbingStrategy<1,0>,blender::DefaultHash<std::string>,blender::DefaultEquality<std::string>,blender::SimpleMapSlot<std::string,Material *>,blender::GuardedAllocator> & created_materials, const OBJImportParams & import_params) Line 62	C++
 	blender.exe!blender::io::obj::geometry_to_blender_objects(Main * bmain, Scene * scene, ViewLayer * view_layer, const OBJImportParams & import_params, blender::Vector<std::unique_ptr<blender::io::obj::Geometry,std::default_delete<blender::io::obj::Geometry>>,4,blender::GuardedAllocator> & all_geometries, const blender::io::obj::GlobalVertices & global_vertices, blender::Map<std::string,std::unique_ptr<blender::io::obj::MTLMaterial,std::default_delete<blender::io::obj::MTLMaterial>>,4,blender::PythonProbingStrategy<1,0>,blender::DefaultHash<std::string>,blender::DefaultEquality<std::string>,blender::SimpleMapSlot<std::string,std::unique_ptr<blender::io::obj::MTLMaterial,std::default_delete<blender::io::obj::MTLMaterial>>>,blender::GuardedAllocator> & materials, blender::Map<std::string,Material *,4,blender::PythonProbingStrategy<1,0>,blender::DefaultHash<std::string>,blender::DefaultEquality<std::string>,blender::SimpleMapSlot<std::string,Material *>,blender::GuardedAllocator> & created_materials) Line 64	C++
 	blender.exe!blender::io::obj::importer_main(Main * bmain, Scene * scene, ViewLayer * view_layer, const OBJImportParams & import_params, unsigned __int64 read_buffer_size) Line 125	C++
 	blender.exe!blender::io::obj::importer_main(bContext * C, const OBJImportParams & import_params) Line 98	C++
 	blender.exe!OBJ_import(bContext * C, const OBJImportParams * import_params) Line 38	C++
 	blender.exe!wm_obj_import_exec(bContext * C, wmOperator * op) Line 424	C++
 	blender.exe!wm_handler_fileselect_do(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, int val) Line 2805	C++
 	blender.exe!wm_handler_fileselect_call(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, const wmEvent * event) Line 2898	C++
 	blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3396	C++
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3450	C++
 	blender.exe!wm_event_do_handlers(bContext * C) Line 4077	C++
 	blender.exe!WM_main(bContext * C) Line 616	C++
 	blender.exe!main(int argc, const char * * __formal) Line 590	C++
 	[External Code]	

@aras_p, does this ring a bell?

I can confirm the crash. It doesn't appear to be a regression (the same issue occurs in 3.6.5). Since other applications allow importing this obj, I assume it's a problem in Blender. In debug mode, this triggers an Assert: ``` blender.exe!_BLI_assert_abort() Line 49 C blender.exe!blender::Vector<blender::VecBase<float,3>,4,blender::GuardedAllocator>::operator[](__int64 index) Line 293 C++ > blender.exe!blender::io::obj::MeshFromGeometry::create_normals(Mesh * mesh) Line 381 C++ blender.exe!blender::io::obj::MeshFromGeometry::create_mesh(Main * bmain, blender::Map<std::string,std::unique_ptr<blender::io::obj::MTLMaterial,std::default_delete<blender::io::obj::MTLMaterial>>,4,blender::PythonProbingStrategy<1,0>,blender::DefaultHash<std::string>,blender::DefaultEquality<std::string>,blender::SimpleMapSlot<std::string,std::unique_ptr<blender::io::obj::MTLMaterial,std::default_delete<blender::io::obj::MTLMaterial>>>,blender::GuardedAllocator> & materials, blender::Map<std::string,Material *,4,blender::PythonProbingStrategy<1,0>,blender::DefaultHash<std::string>,blender::DefaultEquality<std::string>,blender::SimpleMapSlot<std::string,Material *>,blender::GuardedAllocator> & created_materials, const OBJImportParams & import_params) Line 62 C++ blender.exe!blender::io::obj::geometry_to_blender_objects(Main * bmain, Scene * scene, ViewLayer * view_layer, const OBJImportParams & import_params, blender::Vector<std::unique_ptr<blender::io::obj::Geometry,std::default_delete<blender::io::obj::Geometry>>,4,blender::GuardedAllocator> & all_geometries, const blender::io::obj::GlobalVertices & global_vertices, blender::Map<std::string,std::unique_ptr<blender::io::obj::MTLMaterial,std::default_delete<blender::io::obj::MTLMaterial>>,4,blender::PythonProbingStrategy<1,0>,blender::DefaultHash<std::string>,blender::DefaultEquality<std::string>,blender::SimpleMapSlot<std::string,std::unique_ptr<blender::io::obj::MTLMaterial,std::default_delete<blender::io::obj::MTLMaterial>>>,blender::GuardedAllocator> & materials, blender::Map<std::string,Material *,4,blender::PythonProbingStrategy<1,0>,blender::DefaultHash<std::string>,blender::DefaultEquality<std::string>,blender::SimpleMapSlot<std::string,Material *>,blender::GuardedAllocator> & created_materials) Line 64 C++ blender.exe!blender::io::obj::importer_main(Main * bmain, Scene * scene, ViewLayer * view_layer, const OBJImportParams & import_params, unsigned __int64 read_buffer_size) Line 125 C++ blender.exe!blender::io::obj::importer_main(bContext * C, const OBJImportParams & import_params) Line 98 C++ blender.exe!OBJ_import(bContext * C, const OBJImportParams * import_params) Line 38 C++ blender.exe!wm_obj_import_exec(bContext * C, wmOperator * op) Line 424 C++ blender.exe!wm_handler_fileselect_do(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, int val) Line 2805 C++ blender.exe!wm_handler_fileselect_call(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, const wmEvent * event) Line 2898 C++ blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3396 C++ blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3450 C++ blender.exe!wm_event_do_handlers(bContext * C) Line 4077 C++ blender.exe!WM_main(bContext * C) Line 616 C++ blender.exe!main(int argc, const char * * __formal) Line 590 C++ [External Code] ``` @aras_p, does this ring a bell?
Germano Cavalcante added
Module
Pipeline, Assets & IO
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-11-01 19:58:22 +01:00

Thanks for the report, will look into what's going on

Thanks for the report, will look into what's going on
Aras Pranckevicius self-assigned this 2023-11-01 20:44:16 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-02 20:35:11 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114304
No description provided.